# tombo-py

./: .gitignore  README.md  add_wake.py  assemble_matrix.py  b_vel_B_by_T_matrix.py  config.toml  force_moment.py  globals.py  lrs_wing_NVs.py  nd_data.py  plot_GAM.py  plot_function.py  plotting.py  pyproject.toml  requirements.txt  symmetric_5_sided_mesh.py  temp_arrays.py  tombo.py  unoptimized.ipynb  wing_total.py
matlab_data/: data1.mat  data4.mat
python_code/3d/: README.md  VORTEXm.py  Wing.py  add_wake.py  assemble_matrix.py  assemble_vel_B_by_T.py  b_vel_B_by_T_matrix.py  cross_matrix.py  cross_vel_B_by_T.py  divide_GAM.py  force_moment.py  globals.py  lr_mass_L2GT.py  lr_set_matrix.py  lrs_wing_NVs.py  mVORTEX.py  n_vel_T_by_W.py  nd_data.py  plot_GAM.py  plot_WB.py  plot_function.py  s_impulse_WT.py  solution.py  symmetric_5_sided_mesh.py  tbForceMoment.py  tbplotGAM.py  tbwingPathNC.py  tbwingPathNCL.py  tbwingPathTail.py  tombo.py  vel_B_by_T.py  vel_by.py  wing.py  wingPath.py  wing_m.py  wing_total.py
src/tombo/: VORTEXm.py  __main__.py  add_wake.py  assemble_matrix.py  assemble_vel_B_by_T.py  b_vel_B_by_T_matrix.py  cross_matrix.py  cross_vel_B_by_T.py  force_moment.py  globals.py  lr_set_matrix.py  lrs_wing_NVs.py  mVORTEX.py  n_vel_T_by_W.py  plotting.py  s_impulse_WT.py  simulate.py  solution.py  symmetric_5_sided_mesh.py  tombo.py  vel_B_by_T.py  vel_by.py
tests/: README.md  test_config.toml  test_globals.py  test_tombo.py
tombo/: add_wake.py  lrs_wing_NVs.py  plotting.py  solution.py  symmetric_5_sided_mesh.py  tombo.py
(+11 files in other folders)
