[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tombo"
version = "0.0.1"
description = "A simulation of flapping wings"
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "numba",
    "tomli"
]

[project.scripts]
tombo = "tombo.__main__:main"

[project.optional-dependencies]
test = ["pytest>=6.0"]
